<resources>
    <!-- Auth -->
    <string name="app_name">template</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_email_hint">Email</string>
    <string name="auth_sign_in_btn">Sign in</string>
    <string name="auth_forgot_password">Forgot password?</string>
    <string name="auth_or">or</string>
    <string name="auth_sign_in_with_facebook">Sign in with facebook</string>
    <string name="auth_sign_in_with_google">Sign in with google</string>
    <string name="auth_don_t_have_an_account">Don\'t have an account?</string>
    <string name="auth_sign_up_now">Sign up now!</string>
    <string name="dialog_loading">Loading...</string>
    <string name="auth_populate_fields_error">Populate this field</string>
    <string name="auth_password_incorrect_error">Password incorrect</string>
    <string name="auth_email_incorrect_error">Email not valid.</string>
    <string name="auth_sign_up_title">Register</string>
    <string name="auth_name_hint">Name</string>
    <string name="auth_confirm_password_hint">Confirm password</string>
    <string name="auth_sign_in_already_have">Sign in</string>
    <string name="auth_have_an_account">Already have an account?</string>
    <string name="auth_password_no_match_error">Passwords do not match</string>
</resources>
